--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,40 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Office Excuse Generator</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+
+      <h1 class="mt-5">
+        I declare… this is a very good excuse.
+      </h1>
+
+      <p class="mt-3">
+        A random office excuse generator.  
+        HR may or may not accept it.
       </p>
+
+      <i class="fa-regular fa-face-flushed fa-3x my-3" id="panic-icon"></i>
+
+      <p id="excuse" class="fs-4 mt-3">
+        I was late, but it was definitely not my fault.
+      </p>
+
       <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        Made with ❤️ by <b>Burcu Cukurluoz</b>  
+        <br />
+        <em>“That’s what she said.”</em>
       </div>
     </div>
 
