--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Office Excuse Generator</title>
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -25,8 +19,6 @@
         HR may or may not accept it.
       </p>
 
-      <i class="fa-regular fa-face-flushed fa-3x my-3" id="panic-icon"></i>
-
       <p id="excuse" class="fs-4 mt-3">
         I was late, but it was definitely not my fault.
       </p>
@@ -38,7 +30,6 @@
       </div>
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
   </body>
 </html>
