--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,28 +6,26 @@
     <title>Office Excuse Generator</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
-    <div class="container-fluid text-center">
-
-      <h1 class="mt-5">
+    <div id="page-container">
+      <h1 id="title">
         I declare… this is a very good excuse.
       </h1>
-
-      <p class="mt-3">
+      <p id="description">
         A random office excuse generator.  
         HR may or may not accept it.
       </p>
 
-      <p id="excuse" class="fs-4 mt-3">
-        I was late, but it was definitely not my fault.
-      </p>
+      <button id="generate-excuse">I was late, but it was definitely not my fault.</button>
 
-      <div class="fixed-bottom p-4">
+      <p id="excuse"></p>
+
+      <div class="fixed-bottom">
         Made with ❤️ by <b>Burcu Cukurluoz</b>  
         <br />
         <em>“That’s what she said.”</em>
       </div>
+
     </div>
 
     <script type="module" src="/app.js"></script>
