--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,24 @@
     <title>Office Excuse Generator</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+
     <div id="page-container">
-      <h1 id="title">
-        I declare… this is a very good excuse.
-      </h1>
-      <p id="description">
-        A random office excuse generator.  
-        HR may or may not accept it.
-      </p>
 
-      <button id="generate-excuse">I was late, but it was definitely not my fault.</button>
+      <h1 id="title">  Prepare yourself… these excuses are genius. </h1>
 
-      <p id="excuse"></p>
+      <p id="description">Well, well, well… how the turntables…</p>
+
+      <div id="excuse-image-container">
+        <img id="excuse-image" src="" alt="Excuse image">
+      </div>
+      <div id="excuse"></div>
+      <button id="generate-excuse">That’s what she said.</button>
 
       <div class="fixed-bottom">
-        Made with ❤️ by <b>Burcu Cukurluoz</b>  
-        <br />
-        <em>“That’s what she said.”</em>
+        Made with ❤️ by <b>Burcu Cukurluoz</b> 
       </div>
-
     </div>
 
     <script type="module" src="/app.js"></script>
