Actualización de Java, CSS y HTML

--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,19 @@
     <title>Office Excuse Generator</title>
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
-
     <div id="page-container">
-
-      <h1 id="title">  Prepare yourself… these excuses are genius. </h1>
-
-      <p id="description">Well, well, well… how the turntables…</p>
-
+      <h1 id="title">Prepare yourself…These excuses are genius.</h1>
+      <p id="description"></p>
       <div id="excuse-image-container">
         <img id="excuse-image" src="" alt="Excuse image">
       </div>
       <div id="excuse"></div>
-      <button id="generate-excuse">That’s what she said.</button>
+      <button id="generate-excuse">Well, well, well… how the turntables…</button>
 
       <div class="fixed-bottom">
-        Made with ❤️ by <b>Burcu Cukurluoz</b> 
+        Made with ❤️ by <b>Burcu Cukurluoz</b>
+        <br><em>That’s what she said.</em>
       </div>
     </div>
 
